--- a/001 Администрирование/001 Архитектура и утстановка/Очистка.md
+++ b/001 Администрирование/001 Архитектура и утстановка/Очистка.md
@@ -1,1 +1,5 @@
-
+[Очистка](https://edu.postgrespro.ru/dba1-13/dba1_06_arch_vacuum_overview.html)
+<details>
+  <summary>Конспект</summary>
+  Механизм многоверсионности позволяет эффективно реализовать <b>изоляцию на основе снимков</b>, но в результате в табличных страницах  накапливаются <b>старые версии строк</b>, а в страницах индексов — <b>сылки на эти версии</b>. Какое-то время исторические версии нужны, чтобы транзакции могли работать со своими снимками данных. Но со временем не остается ни одного снимка данных, которому требовалась бы старая версия строки; такая версия называется «мертвой». Процедура очистки вычищает мертвые версии строк из табличных страниц и ненужные индексные записи, которые ссылались на такие версии. Если своевременно не вычищать исторические данные, таблицы и индексы будут неконтролируемо разрастаться и поиск в них актуальных версий строк будет замедляться.
+</details>
