--- a/001 Администрирование/009 Утилиты и расширения/Очистка.md
+++ b/001 Администрирование/009 Утилиты и расширения/Очистка.md
@@ -1,1 +1,9 @@
+## Администрирование данных
+<details>
+  <summary>Альтернативы VACUUM</summary>
+  
+  [pgcompacttable](https://github.com/dataegret/pgcompacttable)
+  
+  [pg_repack](https://github.com/reorg/pg_repack)
 
+</details>
