--- a/001 Администрирование/009 Утилиты и расширения/Очистка.md
+++ b/001 Администрирование/009 Утилиты и расширения/Очистка.md
@@ -1,5 +1,6 @@
+#### Альтернативы VACUUM
 <details>
-  <summary>Альтернативы VACUUM</summary>
+  <summary>Ссылки</summary>
   
   [pgcompacttable](https://github.com/dataegret/pgcompacttable)
   
