Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -8,3 +8,17 @@
 Это позволяет исключить неиспользуемые шарды. 
 Кроме того, Citus делегитрует вычисления на рабочие узлы, распределяя нагрузку и сокращая сетевой трафик.
 
+### Оптимизация рабочих узлов
+[Подробно](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
+
+Узлы представляют собой ничто иное как просто экземпляры PG. Координатор распределяет запросы для параллельного прцессинга по узлам, а узлы в свою очередь просто работают в качестве отдельного экземпляра.
+Сооотв к ним относится все что касается оптимизации PG.
+
+#### Техника оптимизации
+Пускаем запрос на основном узле
+```
+EXPLAIN VERBOSE
+ SELECT...
+```
+Собираем план. в котором будет присутствовать контекстный запрос со всеми контекстными объектами узла.
+Далее идем с этим запросом на узел и оптимизируем его. Далее пропагандируем оптимизацию на все узлы.
