Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -22,3 +22,14 @@ EXPLAIN VERBOSE
 ```
 Собираем план. в котором будет присутствовать контекстный запрос со всеми контекстными объектами узла.
 Далее идем с этим запросом на узел и оптимизируем его. Далее пропагандируем оптимизацию на все узлы.
+
+Чтобы увидеть всю картину по всем узлам, ставим флаг
+```
+SET citus.explain_all_tasks = 1;
+```
+После чего получаем разворотку EXPLAIN по всем узлам.
+реальное положение узнаем при помощи EXPLAIN ANALYZE, которая сортирует планы по убыванию времени выполнения. а без разворотки (citus.explain_all_tasks = 0) показывает самый длительный план.
+
+> Разница в выполнении может быть из-за железа, конфигурации или локальных перекосов данных.
+
+
