Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -1,4 +1,4 @@
-### [Шардирование таблиц](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#table-distribution-and-shards)
+## [Шардирование таблиц](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#table-distribution-and-shards)
 В качестве поля для шардирования выбираем то что либо
 * участвует в объединениях
 * используется в фильтрах
@@ -6,11 +6,11 @@
 Это позволяет исключить неиспользуемые шарды. 
 Кроме того, Citus делегитрует вычисления на рабочие узлы, распределяя нагрузку и сокращая сетевой трафик.
 
-### [Оптимизация рабочих узлов](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
+## [Оптимизация рабочих узлов](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
 Узлы представляют собой ничто иное как просто экземпляры PG. Координатор распределяет запросы для параллельного прцессинга по узлам, а узлы в свою очередь просто работают в качестве отдельного экземпляра.
 Сооотв к ним относится все что касается оптимизации PG.
 
-#### [Техника оптимизации](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
+### [Техника оптимизации](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
 Пускаем запрос на основном узле
 ```
 EXPLAIN VERBOSE
@@ -28,7 +28,7 @@ SET citus.explain_all_tasks = 1;
 
 > Разница в выполнении может быть из-за железа, конфигурации или локальных перекосов данных.
 
-#### [Масштабирование производительности](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#scaling-out-performance)
+### [Масштабирование производительности](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#scaling-out-performance)
 В идеале правильное шардирование должно привести к возможности выполнения запросов на отдельной шарде **в пределах** имеющейся там **оперативнгой памяти**. При нехватке ее под текущие задачи рекомендуется испотльзовать **хотя бы SSD**.
 При распределении точечных запросов на шарды, речь, как правило, идет про **рандомное чтение**, и HDD здесь дает наихудшие показатели.
 
@@ -36,11 +36,11 @@ SET citus.explain_all_tasks = 1;
 
 Следующим моментом является тема параллелизма. Для достижения его статистически приемлемого уровня, необходимо на каждой рабочей ноде создавать **количество шард**, не меньшее **количества ядер CPU**. И принимать во внимание, что часть шард при запросах будет игнорироваться. Здесь тонкий момент средне статистического попадания в оптимальное значение.
 
-#### [Распределенный тюнинг](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#distributed-query-performance-tuning)
+### [Распределенный тюнинг](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#distributed-query-performance-tuning)
 Первоначально необхлодимо пустить запрос на координаторе и соотв его часть на рабочем узле (установив **\timing**). Это даст представление о проблемах на собственно распределенном запросе.
 Далее тюнинг рассматриваем в двух частях - основной и расширенный.
 
-##### Основной
+#### Основной
 
 
 
