Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -40,7 +40,20 @@ SET citus.explain_all_tasks = 1;
 Первоначально необхлодимо пустить запрос на координаторе и соотв его часть на рабочем узле (установив **\timing**). Это даст представление о проблемах на собственно распределенном запросе.
 Далее тюнинг рассматриваем в двух частях - основной и расширенный.
 
-### Основной
+### [Основной](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#general)
+С учетом распределения данных по шардам, увеличение потоков вставки в целом сильно повышает общий уровень вставки (также видимо в связи с неактуальностью PK на распределенной схеме.).
+
+Особое внимание следует уделять конструкции подзапросов и CTE.
+
+> По всей видимости это самое больное место распределенных вычислений.
+
+Необходимо всячески избегать [Subquery/CTE Push-Pull Execution](https://docs.citusdata.com/en/v12.0/develop/reference_processing.html#subquery-cte-push-pull-execution)
+Для этих целей стараться колоцировать данные, используемые в подзапросах, чтобы они могли четко делегироваться для выполнения на узлах, имея полный набор необходимых данных в пределах узла.
+
+В случае, если это невозможно, стараться минимизировать как возвращаемый из подзапроса на координатор массив данных, так и количество рабочих узлов, на которые будет пропагандироваться в итоге результат подзапроса.
+
+В случае колоцирования данных CTE, рекомендуется использовать технику его материализации [1](https://postgrespro.ru/docs/postgresql/16/queries-with#QUERIES-WITH-CTE-MATERIALIZATION) [2](https://www.postgresql.org/docs/current/queries-with.html#QUERIES-WITH-CTE-MATERIALIZATION). Когда запрос CTE встраивается в родительский (использующий результаты CTE) запрос и т.о. может выполнять фильтрованную родительским запросом часть на соотв рабочем узле (разумеется, как указывалось выше. при условии колоцирования данных подзапроса).
+
 
 
 
