Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -52,10 +52,14 @@ SET citus.explain_all_tasks = 1;
 
 В случае, если это невозможно, стараться минимизировать как возвращаемый из подзапроса на координатор массив данных, так и количество рабочих узлов, на которые будет пропагандироваться в итоге результат подзапроса.
 
-В случае колоцирования данных CTE, рекомендуется использовать технику его материализации [1](https://postgrespro.ru/docs/postgresql/16/queries-with#QUERIES-WITH-CTE-MATERIALIZATION) [2](https://www.postgresql.org/docs/current/queries-with.html#QUERIES-WITH-CTE-MATERIALIZATION). Когда запрос CTE встраивается в родительский (использующий результаты CTE) запрос и т.о. может выполнять фильтрованную родительским запросом часть на соотв рабочем узле (разумеется, как указывалось выше. при условии колоцирования данных подзапроса).
+В случае колоцирования данных CTE, рекомендуется использовать технику его материализации ([1](https://postgrespro.ru/docs/postgresql/16/queries-with#QUERIES-WITH-CTE-MATERIALIZATION) [2](https://www.postgresql.org/docs/current/queries-with.html#QUERIES-WITH-CTE-MATERIALIZATION)). Когда запрос CTE встраивается в родительский (использующий результаты CTE) запрос и т.о. может выполнять фильтрованную родительским запросом часть на соотв рабочем узле (разумеется, как указывалось выше, при условии колоцирования данных подзапроса).
 
-
-
+### [Расширенный](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#advanced)
+#### [Пул соединений](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#connection-management)
+* [citus.max_adaptive_executor_pool_size (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#max-adaptive-executor-pool-size) очень похож по сути на MAXDOP. Отсюда рекомендации по его применению - 1-2 для коротких запросов, до 16 для аналитических.
+* Обратно [citus.executor_slow_start_interval (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#executor-slow-start-interval) взвинчиваем для коротких запросов, чтобы неповадно было открывать новые соединения и увеличивать параллелизм, и наоборот, умеьшаем для заведомо тяжелых запросов, чтобы пул параллелился сразу.
+* [citus.max_cached_conns_per_worker (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#max-cached-conns-per-worker) сооотв имеет смысл держать для бомбардирующих запросов. Аналитике можно дать развернуться на низком citus.executor_slow_start_interval (integer), а штучным OLTP кэш не нужен.
+* [citus.max_shared_pool_size (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#citus-max-shared-pool-size-integer) рекомендуется ставить значительно выше max_connections limit, поскольку есть ряд операций, которые не ориентируются на параметры лимита соединений. Кроме того, есть процессы репартиционирования, которые тоже никого не спрашивая забирают себе соединения из пула. Таким образом. при низком значении мы можем начать штабелями ронять запросы на сильной нагрузке.
 
 
 
