Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -7,7 +7,7 @@
 Кроме того, Citus делегитрует вычисления на рабочие узлы, распределяя нагрузку и сокращая сетевой трафик.
 
 ## [Оптимизация рабочих узлов](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
-Узлы представляют собой ничто иное как просто экземпляры PG. Координатор распределяет запросы для параллельного прцессинга по узлам, а узлы в свою очередь просто работают в качестве отдельного экземпляра.
+Узлы представляют собой ничто иное как просто экземпляры PG. Координатор распределяет запросы для параллельного процессинга по узлам, а узлы в свою очередь просто работают в качестве отдельного экземпляра.
 Сооотв к ним относится все что касается оптимизации PG.
 
 ### [Техника оптимизации](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#postgresql-tuning)
@@ -29,19 +29,19 @@ SET citus.explain_all_tasks = 1;
 > Разница в выполнении может быть из-за железа, конфигурации или локальных перекосов данных.
 
 ### [Масштабирование производительности](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#scaling-out-performance)
-В идеале правильное шардирование должно привести к возможности выполнения запросов на отдельной шарде **в пределах** имеющейся там **оперативнгой памяти**. При нехватке ее под текущие задачи рекомендуется испотльзовать **хотя бы SSD**.
+В идеале правильное шардирование должно привести к возможности выполнения запросов на отдельной шарде **в пределах** имеющейся там **оперативнгой памяти**. При нехватке ее под текущие задачи рекомендуется использовать **хотя бы SSD**.
 При распределении точечных запросов на шарды, речь, как правило, идет про **рандомное чтение**, и HDD здесь дает наихудшие показатели.
 
 Кроме того, если речь идет про интенсив в плане вычислений, следует рассмотреть вопрос наращивания ядер **CPU**.
 
-Следующим моментом является тема параллелизма. Для достижения его статистически приемлемого уровня, необходимо на каждой рабочей ноде создавать **количество шард**, не меньшее **количества ядер CPU**. И принимать во внимание, что часть шард при запросах будет игнорироваться. Здесь тонкий момент средне статистического попадания в оптимальное значение.
+Следующим моментом является тема параллелизма. Для достижения его статистически приемлемого уровня, необходимо на каждой рабочей ноде создавать **количество шард**, не меньшее **количества ядер CPU**. И принимать во внимание, что часть шард при запросах будет игнорироваться. Здесь тонкий момент средне-статистического попадания в оптимальное значение.
 
 ## [Распределенный тюнинг](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#distributed-query-performance-tuning)
 Первоначально необхлодимо пустить запрос на координаторе и соотв его часть на рабочем узле (установив **\timing**). Это даст представление о проблемах на собственно распределенном запросе.
 Далее тюнинг рассматриваем в двух частях - основной и расширенный.
 
 ### [Основной](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#general)
-С учетом распределения данных по шардам, увеличение потоков вставки в целом сильно повышает общий уровень вставки (также видимо в связи с неактуальностью PK на распределенной схеме.).
+С учетом распределения данных по шардам, увеличение потоков вставки в целом сильно повышает общий уровень вставки (также видимо в связи с неактуальностью PK на распределенной схеме).
 
 Особое внимание следует уделять конструкции подзапросов и CTE.
 
@@ -59,7 +59,7 @@ SET citus.explain_all_tasks = 1;
 * [citus.max_adaptive_executor_pool_size (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#max-adaptive-executor-pool-size) очень похож по сути на MAXDOP. Отсюда рекомендации по его применению - 1-2 для коротких запросов, до 16 для аналитических.
 * Обратно [citus.executor_slow_start_interval (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#executor-slow-start-interval) взвинчиваем для коротких запросов, чтобы неповадно было открывать новые соединения и увеличивать параллелизм, и наоборот, умеьшаем для заведомо тяжелых запросов, чтобы пул параллелился сразу.
 * [citus.max_cached_conns_per_worker (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#max-cached-conns-per-worker) сооотв имеет смысл держать для бомбардирующих запросов. Аналитике можно дать развернуться на низком citus.executor_slow_start_interval (integer), а штучным OLTP кэш не нужен.
-* [citus.max_shared_pool_size (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#citus-max-shared-pool-size-integer) рекомендуется ставить значительно выше max_connections limit, поскольку есть ряд операций, которые не ориентируются на параметры лимита соединений. Кроме того, есть процессы репартиционирования, которые тоже никого не спрашивая забирают себе соединения из пула. Таким образом. при низком значении мы можем начать штабелями ронять запросы на сильной нагрузке.
+* [citus.max_shared_pool_size (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#citus-max-shared-pool-size-integer) рекомендуется ставить значительно выше max_connections limit, поскольку есть ряд операций, которые не ориентируются на параметры лимита соединений. Кроме того, есть процессы репартиционирования, которые тоже никого не спрашивая забирают себе соединения из пула. Таким образом, при низком значении мы можем начать штабелями ронять запросы на сильной нагрузке.
 
 
 
