Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -61,7 +61,16 @@ SET citus.explain_all_tasks = 1;
 * [citus.max_cached_conns_per_worker (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#max-cached-conns-per-worker) сооотв имеет смысл держать для бомбардирующих запросов. Аналитике можно дать развернуться на низком citus.executor_slow_start_interval (integer), а штучным OLTP кэш не нужен.
 * [citus.max_shared_pool_size (integer)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#citus-max-shared-pool-size-integer) рекомендуется ставить значительно выше max_connections limit, поскольку есть ряд операций, которые не ориентируются на параметры лимита соединений. Кроме того, есть процессы репартиционирования, которые тоже никого не спрашивая забирают себе соединения из пула. Таким образом, при низком значении мы можем начать штабелями ронять запросы на сильной нагрузке.
 
-
+#### [Политика распределения задач по раблочим узлам](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#task-assignment-policy)
+В зависимости от целей и существующей конфигурации есть три варианта распределения.
+##### Greedy
+Равномерное распределение по всем узлам. Подходит для большинства задач.
+##### Round-robin
+Применярется когда количество шард относительно мало в сравнении с количеством рабочих узлов.
+Позволяет лучше утилизировать ресурсы кластера.
+##### First-replica
+Задачи узлам назначаются в соответствии с логическим порядком использования шард, и соотв их расположения на узлах.
+Это гарантирует нахождение в памяти на всех задействованных узлах горячих данных, используемых в контексте выполняемого цельного распределенного запроса.
 
 
 
