Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -66,7 +66,7 @@ SET citus.explain_all_tasks = 1;
 ##### Greedy
 Равномерное распределение по всем узлам. Подходит для большинства задач.
 ##### Round-robin
-Применярется когда количество шард относительно мало в сравнении с количеством рабочих узлов.
+Применяется, когда количество шард относительно мало в сравнении с количеством рабочих узлов.
 Позволяет лучше утилизировать ресурсы кластера.
 ##### First-replica
 Задачи узлам назначаются в соответствии с логическим порядком использования шард, и соотв их расположения на узлах.
