Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -72,7 +72,7 @@ SET citus.explain_all_tasks = 1;
 Задачи узлам назначаются в соответствии с логическим порядком использования шард, и соотв их расположения на узлах.
 Это гарантирует нахождение в памяти на всех задействованных узлах горячих данных, используемых в контексте выполняемого цельного распределенного запроса.
 
-#### Формат обмена промежуточными данными
+#### [Формат обмена промежуточными данными](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#intermediate-data-transfer-format)
 По умолчанию Citus передает данные с узлов в текстовом формате. Сериализация и десериализация в этом случае достаточно накладная.
 На версиях PG выше 13 можно включить бинарный формат сериализации, что значительно дешевле.
 Включается он парметром конфигурации [citus.binary_worker_copy_format (boolean)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#binary-worker-copy-format)
