--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -73,11 +73,17 @@ SET citus.explain_all_tasks = 1;
 Это гарантирует нахождение в памяти на всех задействованных узлах горячих данных, используемых в контексте выполняемого цельного распределенного запроса.
 
 #### [Формат обмена промежуточными данными](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#intermediate-data-transfer-format)
-По умолчанию Citus передает данные с узлов в текстовом формате. Сериализация и десериализация в этом случае достаточно накладная.
-На версиях PG выше 13 можно включить бинарный формат сериализации, что значительно дешевле.
+По умолчанию Citus передает данные между узлами в текстовом формате. Сериализация и десериализация в этом случае достаточно накладная.
+На версиях **PG выше 13** можно включить бинарный формат сериализации, что значительно дешевле.
 Включается он парметром конфигурации [citus.binary_worker_copy_format (boolean)](https://docs.citusdata.com/en/v12.0/develop/api_guc.html#binary-worker-copy-format)
 
-
+#### [Бинарный протокол](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#binary-protocol)
+То же самое что выше только в плане передачи итоговых данных на координатор. Особенно касается больших результатов и некоторых искусственных типов данных (бинарных по сути).
+Вкючается
+```
+citus.enable_binary_protocol to true
+```
+По умолчанию для **PG выше 14**. Для 14 и ниже соотв не работает.
 
 
 
