Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -79,7 +79,7 @@ SET citus.explain_all_tasks = 1;
 
 #### [Бинарный протокол](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#binary-protocol)
 То же самое что выше только в плане передачи итоговых данных на координатор. Особенно касается больших результатов и некоторых искусственных типов данных (бинарных по сути).
-Вкючается
+Включается
 ```
 citus.enable_binary_protocol to true
 ```
