Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -85,7 +85,11 @@ citus.enable_binary_protocol to true
 ```
 По умолчанию для **PG выше 14**. Для 14 и ниже соотв не работает.
 
+### [Масштабирование вставки данных](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#scaling-out-data-ingestion)
 
+#### Real-time вставки и обновления
+
+##### Эффективность потока вставки
 
 
 
