Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -87,9 +87,9 @@ citus.enable_binary_protocol to true
 
 ### [Масштабирование вставки данных](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#scaling-out-data-ingestion)
 
-#### Real-time вставки и обновления
+#### [Real-time вставки и обновления](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#real-time-insert-and-updates)
 
-##### Эффективность потока вставки
+##### [Эффективность потока вставки](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-throughput)
 
 
 
