Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -88,14 +88,81 @@ citus.enable_binary_protocol to true
 ### [Масштабирование вставки данных](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#scaling-out-data-ingestion)
 
 #### [Real-time вставки и обновления](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#real-time-insert-and-updates)
+Citus позволят выполнять непосредственно на координаторе
+```
+INSERT, INSERT .. ON CONFLICT, UPDATE, and DELETE
+```
+Все изменения становятся доступны моментально.
+В момент вставки Citus на координаторе смотрит метаданные, определяет рабочий узел, исходя из прописанного в метадате расположения требуемой шарды. коннектится и делает конкурентные (параллельные) вставки, достигая этим высокой пропускной способности на вставку.
 
-##### [Эффективность потока вставки](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-throughput)
+##### [Вставка) вставки](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-throughput)
+> [Benchmark Setup with Citus and pgbench](https://docs.citusdata.com/en/v12.0/extra/write_throughput_benchmark.html#benchmark-setup-with-citus-and-pgbench)
 
+Базовый кластер с 2 ядрами и 7Гб на координаторе + 2 рабочих одноядерных узла с 15Гб позволяет достичь 9к TPC (775 млн вставок в сутки).
+Кластер с 8 ядрами и 30Гб на координаторе + 4 рабочих одноядерных узла с 15Гб позволяет достичь 30к TPC (2+ млрд в сутки).
 
+##### [Обновление](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#update-throughput)
+На обновлениях при конфигурациях выше удается достичь 10к и 24к соотв.
+Обновления создают неактуальные версии строк и требуют соотв VACUUM. При этом последний при работе создает минимальные накладные расходы, т.к. работает в параллель на свободных узлах.
 
+##### [Контрольный лист](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-and-update-throughput-checklist)
+Грамотно настроенный кластер обеспечивает пропускную способность 10-50к вставок/сек.
+Для достижения показателей необходимо принимать во внимание следующее.
+* Большое внимание следует уделять сетевым задержкам, они во многом определяют пропускную способность
+* Вставки необходимо делать параллельными потоками. бщая пропускная способность фактически прямо пропорциональна количеству входных потоков
+* Стандартно контролируем, что рабочие узлы не испытывают проблем по CPU и дискам
+* Большое внимание уделяем CPU на координаторе, это вместе с первым пунктом самая критичная точка для общей производительности
+* Необходимо обеспечить кэширование существующих соединений между вставками, постоянное пересоздание сильно влияет на итоговый результат
+* По архитектуре следует принимать во внимание, что критичен размер полей. Чем он ни меньше, тем эффективнее результат. Проблема с JSON, BLOB & XML. Вариант разбивки широких таблиц на объектно значимые с целевой вставкой только нужных данных.
 
+##### [Замечания по задержкам](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-and-update-latency)
+Пример ниже наглядно демонстрирует накладные расходоы на создание подключений (соединения удерживаются в рамках сессии).
+```
+-- Set up a distributed table that keeps account history information
+CREATE TABLE pgbench_history (tid int, bid int, aid int, delta int, mtime timestamp);
+SELECT create_distributed_table('pgbench_history', 'aid');
 
+-- Enable timing to see reponse times
+\timing on
 
+-- First INSERT requires connection set-up, second will be faster
+INSERT INTO pgbench_history VALUES (10, 1, 10000, -5000, CURRENT_TIMESTAMP); -- Time: 10.314 ms
+INSERT INTO pgbench_history VALUES (10, 1, 22000, 5000, CURRENT_TIMESTAMP); -- Time: 3.132 ms
+```
+#### [Загрузка временных данных](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#staging-data-temporarily)
+При загрузке оперативных данных для вычислений следует пользоваться [нелогируемыми таблицами](https://www.postgresql.org/docs/current/static/sql-createtable.html#SQL-CREATETABLE-UNLOGGED).
+```
+-- example unlogged table
+CREATE UNLOGGED TABLE unlogged_table (
+  key text,
+  value text
+);
+
+-- its shards will be unlogged as well when
+-- the table is distributed
+SELECT create_distributed_table('unlogged_table', 'key');
+
+-- ready to load data
+```
+
+#### [Потоковая загрузка](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#bulk-copy-250k-2m-s)
+[Потоковая загрузка](http://www.postgresql.org/docs/current/static/sql-copy.html) позволяет достичь более высоких показателей вставки.
+Загрузку можно осуществлять как из файла, так и непосредственно из входного потока.
+```
+COPY pgbench_history FROM STDIN WITH (FORMAT CSV);
+```
+Psql фактически формирует предыдущую команду перед обращением к файлу.
+```
+psql -c "\COPY pgbench_history FROM 'pgbench_history-2016-03-04.csv' (FORMAT CSV)"
+```
+Мощь потоковой вставки заключается в том, что она максимально распараллеливает входной поток. Особенно это сказывается при наличии множества или тяжелых индексов на целевой таблице. Скорость вставки при таком вариатне использования может достигать 250к-2млн вставок/сек. Отдельный блог на эту тему [тут](https://www.citusdata.com/blog/2016/06/15/copy-postgresql-distributed-tables?_gl=1*9qzqhf*_ga*MjAzMjEzMDkxNi4xNzA1MzAxODI1*_ga_DS5S1RKEB7*MTcwNjI2NTU4Ni44LjEuMTcwNjI2NTYwMS4wLjAuMA..).
+
+##### Рекомендации по массовой загрузке
+* Рекомедуемый размер пакета 50к-100к. Идеально грузить множество файлов с этим размером на каждый.
+* Следует предварительно последовательно протестировать степень входного параллелизма в 2,4,8,16
+* Большую роль играют CPU оптимизации координатора
+* Рекомендуется использовать относительно небольшое количество шард - 32, возможно 64, не больше
+* Тестирование следует проводить на больших промежутках в 2,4,8,24ч. Чем ни больше, тем будет более точное представление о поведении на проде.
 
 
 
