Update 001 Оптимизация запросов.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Оптимизация/001 Оптимизация запросов.md
@@ -95,7 +95,7 @@ INSERT, INSERT .. ON CONFLICT, UPDATE, and DELETE
 Все изменения становятся доступны моментально.
 В момент вставки Citus на координаторе смотрит метаданные, определяет рабочий узел, исходя из прописанного в метадате расположения требуемой шарды. коннектится и делает конкурентные (параллельные) вставки, достигая этим высокой пропускной способности на вставку.
 
-##### [Вставка) вставки](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-throughput)
+##### [Вставка](https://docs.citusdata.com/en/v12.0/performance/performance_tuning.html#insert-throughput)
 > [Benchmark Setup with Citus and pgbench](https://docs.citusdata.com/en/v12.0/extra/write_throughput_benchmark.html#benchmark-setup-with-citus-and-pgbench)
 
 Базовый кластер с 2 ядрами и 7Гб на координаторе + 2 рабочих одноядерных узла с 15Гб позволяет достичь 9к TPC (775 млн вставок в сутки).
