Update 002 Диагностические запросы.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
@@ -1,2 +1,43 @@
+## [Использование DMV](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#useful-diagnostic-queries)
+### [Вычисление шарды тенанта](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#finding-which-shard-contains-data-for-a-specific-tenant)
+Определение местоположения при шардировании по ключу (напр тенант)
+```
+SELECT shardid, shardstate, shardlength, nodename, nodeport, placementid
+  FROM pg_dist_placement AS placement,
+       pg_dist_node AS node
+ WHERE placement.groupid = node.groupid
+   AND node.noderole = 'primary'
+   AND shardid = (
+     SELECT get_shard_id_for_distribution_column('stores', 4)
+   );
 
-### [Использование DMV](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#useful-diagnostic-queries)
+┌─────────┬────────────┬─────────────┬───────────┬──────────┬─────────────┐
+│ shardid │ shardstate │ shardlength │ nodename  │ nodeport │ placementid │
+├─────────┼────────────┼─────────────┼───────────┼──────────┼─────────────┤
+│  102009 │          1 │           0 │ localhost │     5433 │           2 │
+└─────────┴────────────┴─────────────┴───────────┴──────────┴─────────────┘
+```
+### []()
+```
+```
+### []()
+```
+```
+### []()
+```
+```
+### []()
+```
+```
+### []()
+```
+```
+### []()
+```
+```
+### []()
+```
+```
+### []()
+```
+```
